@@ -958,6 +958,23 @@ public class Configuration implements IConfiguration
 	    pd.removePath(path);
 	}
 	
+	// remove path from all OutputModule::SelectEvents::SelectEvents
+	Iterator<ModuleInstance> itM = moduleIterator();
+	while (itM.hasNext()) {
+	    ModuleInstance module = itM.next();
+	    if (!module.template().type().equals("OutputModule")) continue;
+	    Parameter[] tmp=module.findParameters("SelectEvents::SelectEvents");
+	    if (tmp.length!=1) continue;
+	    VStringParameter selEvts = (VStringParameter)tmp[0];
+	    for (int i=0;i<selEvts.vectorSize();i++) {
+		String iAsString = (String)selEvts.value(i);
+		if (iAsString.equals(path.name())) {
+		    selEvts.removeValue(i);
+		    module.setHasChanged();
+		}
+	    }
+	}
+	
 	int index = paths.indexOf(path);
 	paths.remove(index);
 	hasChanged = true;
